fix: consistent documentation
